--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+HOLA AMIGOS, COMO ESTAN This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
@@ -19,7 +19,7 @@ summary(cars)
 
 ## Including Plots
 
-You can also embed plots, for example: naita
+You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
 plot(pressure)
